--- a/style.css
+++ b/style.css
@@ -48,10 +48,12 @@ main {
     margin-top: 25px;
 }
 
-main h1,h3 {
+main h1,
+h3 {
     justify-self: center;
 }
-main h3{
+
+main h3 {
     margin-top: 25px;
 }
 
@@ -146,6 +148,61 @@ main h3{
     gap: 25px;
 }
 
+.modal {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    backdrop-filter: blur(2px);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    color: #222222;
+}
+
+.winModal {
+    width: 45%;
+    height: 40%;
+    background: #eeeeee;
+    border-radius: 21px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+.winModal h3{
+    margin-top: 25px;
+}
+
+hr {
+    width: 100%;
+    height: 2px;
+}
+
+.winScore {
+    display: flex;
+    gap: 25px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btns {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 50px;
+}
+
+.btns button {
+    padding: 15px 10px;
+    width: 30%;
+}
+
 @media (max-width:786px) {
     header {
         font-size: 14px;
@@ -161,6 +218,9 @@ main h3{
     }
 
     .userArea {
+        width: 80%;
+    }
+    .winModal{
         width: 80%;
     }
 }
@@ -218,7 +278,11 @@ main h3{
         right: 53px;
         top: 200px;
     }
-    .scoreArea p{
+
+    .scoreArea p {
         font-size: 1rem;
+    }
+    .winModal{
+        width: 100%;
     }
 }
